HER-52 Added toggle to hide price info for OMD.

--- a/src/event_form/steps/event-form-step5.html
+++ b/src/event_form/steps/event-form-step5.html
@@ -193,7 +193,7 @@
           </div>
         </div>
 
-        <price-info price="price"></price-info>
+        <price-info price="price" ng-if="!hidePriceInfo"></price-info>
         <uitpas-info organizer="eventFormData.organizer" price="price"></uitpas-info>
 
         <div class="row extra-contact">
