III-916: Add delete option and modal to organization search items

--- a/src/management/organizers/search/organization-search.html
+++ b/src/management/organizers/search/organization-search.html
@@ -36,9 +36,7 @@
                     <th>Opties</th>
                 </tr>
                 </thead>
-                <tbody>
-                <tr udb-organization-search-item="organization" ng-repeat="organization in $ctrl.searchResult.member">
-                </tr>
+                <tbody udb-organization-search-item="organization" ng-repeat="organization in $ctrl.searchResult.member">
                 </tbody>
             </table>
             <div class="panel-footer">
