--- a/src/management/organizers/search/organization-search-item.html
+++ b/src/management/organizers/search/organization-search-item.html
@@ -1,15 +1,18 @@
-<td ng-bind="::osic.organization.name"></td>
-<td>
-    <span ng-bind="::osic.organization.address.streetAddress"></span>
-    <br>
-    <span ng-bind="::osic.organization.address.addressLocality"></span>
-</td>
-<td>
-    <div class="btn-group">
-        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Bewerken <span class="caret"></span></button>
-        <ul class="dropdown-menu">
-            <li><a ui-sref="management.organizers.detail({id: osic.organization.id})" ui-sref-opts="{reload:true}">Bewerken</a></li>
-        </ul>
-    </div>
-</td>
+<tr class="organization-search-item" ng-class="{'deleted': osic.organizationDeleted}">
+    <td ng-bind="::osic.organization.name"></td>
+    <td>
+        <span ng-bind="::osic.organization.address.streetAddress"></span>
+        <br>
+        <span ng-bind="::osic.organization.address.addressLocality"></span>
+    </td>
+    <td>
+        <div class="btn-group">
+            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Bewerken <span class="caret"></span></button>
+            <ul class="dropdown-menu">
+                <li><a ui-sref="management.organizers.detail({id: osic.organization.id})" ui-sref-opts="{reload:true}">Bewerken</a></li>
+                <li><a ui-sref="management.organizers.search.delete({id: osic.organization.id})">Verwijderen</a></li>
+            </ul>
+        </div>
+    </td>
+</tr>
