--- a/src/management/organizers/search/organization-search.html
+++ b/src/management/organizers/search/organization-search.html
@@ -1,12 +1,17 @@
 <h1 class="title">Organisaties</h1>
 
 <div class="row">
-    <div class="col-md-11">
+    <div class="col-md-8">
         <udb-query-search-bar search-label="Zoeken op organisatie naam"
                               on-change="$ctrl.queryChanged(query)"></udb-query-search-bar>
     </div>
     <div class="col-md-1">
         <i ng-show="$ctrl.loading" class="fa fa-circle-o-notch fa-spin"></i>
+    </div>
+    <div class="col-md-3 text-right">
+        <a class="btn btn-primary" ui-sref="management.organizers.search.create">
+            <i class="fa fa-plus-circle"></i> Organisatie toevoegen
+        </a>
     </div>
 </div>
 
