III-916 Use correct property saving on controller for spinner.

--- a/src/management/organizers/delete/organization-delete.modal.html
+++ b/src/management/organizers/delete/organization-delete.modal.html
@@ -18,6 +18,6 @@
         Annuleren
     </button>
     <button type="button" class="btn btn-primary" ng-click="odc.deleteOrganization()">
-        Definitief verwijderen <i class="fa fa-circle-o-notch fa-spin" ng-show="saving"></i>
+        Definitief verwijderen <i class="fa fa-circle-o-notch fa-spin" ng-show="odc.saving"></i>
     </button>
 </div>
