--- a/src/management/organizers/edit/organizer-edit.html
+++ b/src/management/organizers/edit/organizer-edit.html
@@ -29,8 +29,7 @@
 
             <div class="col-sm-12">
                 <p class="alert alert-warning" ng-show="organizersWebsiteFound">
-                    Dit adres is al gebruikt door de organisatie '<span ng-bind="firstOrganizerFound.name"></span>'.
-                    Geef een unieke website op.
+                    Deze URL is al in gebruik door een andere organisatie.
                 </p>
             </div>
         </div>
@@ -98,7 +97,7 @@
             </div>
             <div class="col-sm-12">
 
-                <div ng-show="oec.organizer.contact.length === 0">
+                <div ng-show="contact.length === 0">
                     <ul class="list-unstyled">
                         <li><a ng-click="addOrganizerContactInfo('phone')" href="#">Telefoonnummer toevoegen</a></li>
                         <li><a ng-click="addOrganizerContactInfo('email')" href="#">E-mailadres toevoegen</a></li>
@@ -106,16 +105,16 @@
                     </ul>
                 </div>
 
-                <table class="table" ng-show="oec.organizer.contact.length">
-                    <tr ng-repeat="(key, info) in oec.organizer.contact"
+                <table class="table" ng-show="contact.length">
+                    <tr ng-repeat="(key, info) in contact"
                         ng-model="info"
                         udb-contact-info-validation
                         ng-class="{'has-error' : infoErrorMessage !== '' }">
                         <td>
                             <select class="form-control" ng-model="info.type" ng-change="clearInfo();">
-                                <option value="url">Website</option>
-                                <option value="phone">Telefoonnummer</option>
-                                <option value="email">E-mailadres</option>
+                              <option value="url">Website</option>
+                              <option value="phone">Telefoonnummer</option>
+                              <option value="email">E-mailadres</option>
                             </select>
                         </td>
                         <td ng-switch="info.type">
