III-1425 api callback for updating name of organizer

--- a/src/management/organizers/edit/organizer-edit.html
+++ b/src/management/organizers/edit/organizer-edit.html
@@ -1,4 +1,4 @@
-<h1 class="title" ng-bind="oec.organizer.name"></h1>
+<h1 class="title" ng-bind="oec.oldOrganizer.name"></h1>
 
 <div ng-show="!oec.organizer && !oec.loadingError">
     <i class="fa fa-circle-o-notch fa-spin"></i>
