III-1425 change route on search page to edit instead of detail

--- a/src/management/organizers/search/organization-search-item.html
+++ b/src/management/organizers/search/organization-search-item.html
@@ -19,7 +19,7 @@
             <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Bewerken <span class="caret"></span></button>
             <ul class="dropdown-menu dropdown-menu-right">
-                <li><a ui-sref="management.organizers.detail({id: osic.organization.id})" ui-sref-opts="{reload:true}">Bewerken</a></li>
+                <li><a ui-sref="management.organizers.edit({id: osic.organization.id})" ui-sref-opts="{reload:true}">Bewerken</a></li>
                 <li><a ui-sref="management.organizers.search.delete({id: osic.organization.id})">Verwijderen</a></li>
             </ul>
         </div>
