III-2025: Form place calendar component

--- a/src/event_form/steps/event-form-step2.html
+++ b/src/event_form/steps/event-form-step2.html
@@ -7,7 +7,7 @@
       <span ng-show="eventFormData.isPlace">Wanneer is deze plaats of locatie open?</span>
     </h2>
 
-    <udb-form-calendar ng-if="eventFormData.isPlace"></udb-form-calendar>
+    <udb-form-place-calendar ng-if="eventFormData.isPlace"></udb-form-place-calendar>
     <udb-form-event-calendar ng-if="eventFormData.isEvent"></udb-form-event-calendar>
   </section>
 </div>
