--- a/src/event_form/steps/event-form-publish.html
+++ b/src/event_form/steps/event-form-publish.html
@@ -3,8 +3,7 @@
 
     <udb-event-form-save-time-tracker></udb-event-form-save-time-tracker>
     <button type="submit" class="btn btn-success" ng-click="efpc.publish()" ng-if="efpc.isDraft(efpc.eventFormData.workflowStatus)">Meteen publiceren</button>
-    <a href="" ng-click="efpc.publishLater()" ng-if="efpc.isDraft(efpc.eventFormData.workflowStatus) && !efpc.toBePublishedLater && efpc.hasNoDefault">Later publiceren</a>
-    <button class="btn btn-success" ng-click="efpc.publishLater()" ng-if="efpc.isDraft(efpc.eventFormData.workflowStatus) && efpc.toBePublishedLater && efpc.hasNoDefault">Later publiceren</button>
+    <button class="btn btn-success" ng-click="efpc.publishLater()" ng-if="efpc.isDraft(efpc.eventFormData.workflowStatus) && efpc.hasNoDefault">Later publiceren</button>
     <button type="submit" class="btn btn-success" ng-click="efpc.preview()" ng-if="!efpc.isDraft(efpc.eventFormData.workflowStatus)">Klaar met bewerken</button>
-    <a href="" ng-click="efpc.publishLater()" ng-if="!efpc.isDraft(efpc.eventFormData.workflowStatus) && efpc.eventFormData.availableFrom">Online vanaf {{efpc.eventFormData.availableFrom | date: 'dd/MM/yyyy' }} (wijzigen)</a>
+    <span ng-if="efpc.hasNoDefault && efpc.eventFormData.availableFrom !== ''" && !efpc.isDraft(efpc.eventFormData.workflowStatus)>Online vanaf {{efpc.eventFormData.availableFrom | date: 'dd/MM/yyyy' }}</span>
 </div>
