--- a/src/management/organizers/edit/organizer-edit.html
+++ b/src/management/organizers/edit/organizer-edit.html
@@ -10,11 +10,11 @@
             <div class="col-sm-12 col-md-8">
                 <p class="alert alert-danger" ng-show="oec.hasErrors">
                     <span ng-show="oec.organizersWebsiteFound">Deze URL is al in gebruik door een andere organisatie.<br /></span>
-                    <span ng-show="oec.validUrl"Gelieve een gelidge URL op te geven.<br /></span>
+                    <span ng-show="oec.invalidUrl">Gelieve een gelidge URL op te geven.<br /></span>
                     <span ng-show="oec.websiteError">Er ging iets mis met het controleren van de website.<br /></span>
                     <span ng-show="oec.organizerEditForm.website.$error.required">Gelieve een website in te vullen.<br /></span>
                     <span ng-show="oec.organizerEditForm.name.$error.required">Gelieve een naam in te vullen.<br /></span>
-                    <span ng-show="oec.organizerEditForm.street.$error.required">Gelieve een straat en huisnummer in te vullen.<br /></span>
+                    <span ng-show="oec.addressError">Gelieve een straat en huisnummer in te vullen.<br /></span>
                 </p>
 
                 <div class="form-group has-feedback"
