III-1425 organizer address component in event form organizer modal

--- a/src/management/organizers/edit/organizer-edit.html
+++ b/src/management/organizers/edit/organizer-edit.html
@@ -53,7 +53,7 @@
     </form>
 
     <udb-organizer-address address="oec.organizer.address"
-                           on-update="oec.validateAddress(address)"></udb-organizer-address>
+                           on-update="oec.validateAddress(address, error)"></udb-organizer-address>
     <udb-organizer-contact contact="oec.contact"
                            on-update="oec.validateContact(contact, error)"></udb-organizer-contact>
 
