--- a/src/management/organizers/edit/organizer-edit.html
+++ b/src/management/organizers/edit/organizer-edit.html
@@ -15,6 +15,7 @@
                     <span ng-show="oec.organizerEditForm.website.$error.required">Gelieve een website in te vullen.<br /></span>
                     <span ng-show="oec.organizerEditForm.name.$error.required">Gelieve een naam in te vullen.<br /></span>
                     <span ng-show="oec.addressError">Gelieve een straat en huisnummer in te vullen.<br /></span>
+                    <span ng-show="oec.saveError">Er ging iets mis tijdens het opslaan.<br /></span>
                 </p>
 
                 <div class="form-group has-feedback"
