--- a/src/event-detail/ui/event-detail.html
+++ b/src/event-detail/ui/event-detail.html
@@ -127,7 +127,7 @@
                 </td>
               </tr>
             </tbody>
-            <tbody udb-booking-info-detail="::event.bookingInfo"></tbody>
+            <tbody ng-if="!isEmpty(event.bookingInfo)" udb-booking-info-detail="::event.bookingInfo"></tbody>
             <tbody udb-contact-point-detail="::event.contactPoint"></tbody>
             <tbody>
               <tr>
