--- a/src/event-detail/ui/booking-info-detail.directive.html
+++ b/src/event-detail/ui/booking-info-detail.directive.html
@@ -11,7 +11,8 @@
                     </span>
             </li>
             <li ng-if="::bookingInfo.phone" ng-bind="::bookingInfo.phone"></li>
-            <li ng-if="::bookingInfo.email" ng-bind="::bookingInfo.email"></li>
+            <li ng-if="::bookingInfo.email"> <a href="{{'mailto:'+ bookingInfo.email}}">{{::bookingInfo.email}}</a></li>
+            <li ng-if="::bookingInfo.availabilityStarts" > Van {{::bookingInfo.availabilityStarts | date}} tot {{::bookingInfo.availabilityEnds | date}}</li>
         </ul>
     </td>
     <td ng-if="::isEmpty(bookingInfo)">Geen reservatie info</td>
