III-2089 Sort images on main-image

--- a/src/event-detail/ui/event-detail.html
+++ b/src/event-detail/ui/event-detail.html
@@ -152,7 +152,7 @@
               </tr>
 -->
             </tbody>
-            <tbody udb-image-detail="::event.mediaObject"></tbody>
+            <tbody udb-image-detail="::event.mediaObject" image="::event.image"></tbody>
           </table>
         </div>
       </div>
