--- a/src/event-detail/ui/event-detail.html
+++ b/src/event-detail/ui/event-detail.html
@@ -19,15 +19,15 @@
         <button ng-if="::permissions.editing"
                 class="list-group-item"
                 type="button"
-                ng-click="openEditPage()">Bewerken</button>
+                ng-click="openEditPage()"><i class="fa fa-pencil" aria-hidden="true"></i>  Bewerken</button>
         <button ng-if="::permissions.duplication"
                 class="list-group-item"
                 type="button"
-                ui-sref='duplication.event({id: event.id})'>Kopiëren en aanpassen</button>
+                ui-sref='duplication.event({id: event.id})'><i class="fa fa-files-o" aria-hidden="true"></i>  Kopiëren en aanpassen</button>
         <button ng-if="::permissions.editing"
                 class="list-group-item"
                 href="#"
-                ng-click="deleteEvent()">Verwijderen</button>
+                ng-click="deleteEvent()"><i class="fa fa-trash" aria-hidden="true"></i>  Verwijderen</button>
       </div>
     </div>
     <div class="col-sm-9 col-sm-pull-3">
@@ -137,20 +137,6 @@
                   <span ng-if="!event.typicalAgeRange">Alle leeftijden</span>
                 </td>
               </tr>
-<!--
-              <tr ng-class="::{muted: !event.image}">
-                <td><strong>Afbeeldingen</strong></td>
-                <td>
-                  <img ng-if="::event.image" class="img-responsive" ng-src="{{::event.image}}?width=400" />
-                  <p>
-                    <span ng-repeat="image in ::event.images">
-                      <img ng-src="{{::image.contentUrl}}?height=100" class="offer-image-thumbnail img-responsive" />
-                    </span>
-                    <span ng-if="::!event.image">Geen afbeeldingen</span>
-                  </p>
-                </td>
-              </tr>
--->
             </tbody>
             <tbody udb-image-detail="::event.mediaObject" image="::event.image"></tbody>
           </table>
