--- a/src/place-detail/ui/place-detail.html
+++ b/src/place-detail/ui/place-detail.html
@@ -19,11 +19,11 @@
         <button ng-if="::permissions.editing"
                 class="list-group-item"
                 type="button"
-                ng-click="openEditPage()">Bewerken</button>
+                ng-click="openEditPage()"><i class="fa fa-pencil" aria-hidden="true"></i>  Bewerken</button>
         <button ng-if="::permissions.editing"
                 class="list-group-item"
                 href="#"
-                ng-click="deletePlace()">Verwijderen</button>
+                ng-click="deletePlace()"><i class="fa fa-trash" aria-hidden="true"></i>  Verwijderen</button>
       </div>
     </div>
 
@@ -94,19 +94,8 @@
                   <span ng-if="!place.typicalAgeRange">Alle leeftijden</span>
                 </td>
               </tr>
-              <tr ng-class="::{muted: !place.image}">
-                <td><strong>Afbeeldingen</strong></td>
-                <td>
-                  <img ng-if="::place.image" class="img-responsive" ng-src="{{::place.image}}?width=400" />
-                  <p>
-                    <span ng-repeat="image in ::place.images">
-                      <img ng-src="{{::image.contentUrl}}?height=100" class="offer-image-thumbnail img-responsive" />
-                    </span>
-                    <span ng-if="::!place.image">Geen afbeeldingen</span>
-                  </p>
-                </td>
-              </tr>
             </tbody>
+            <tbody udb-image-detail="::place.mediaObject" image="::place.image"></tbody>
           </table>
         </div>
       </div>
