--- a/src/management/organizers/search/organization-search-item.html
+++ b/src/management/organizers/search/organization-search-item.html
@@ -16,7 +16,7 @@
     </td>
     <td class="text-right">
         <div class="pull-right btn-group" uib-dropdown>
-            <a class="btn btn-default" ui-sref="management.organizers.edit({id: osic.organization.id})" ui-sref-opts="{reload:true}">Bewerken</a>
+            <a class="btn btn-default" ui-sref="management.organizers.edit({id: osic.organization.id})">Bewerken</a>
             <button type="button" class="btn btn-default" uib-dropdown-toggle><span class="caret"></span></button>
             <ul uib-dropdown-menu role="menu">
                 <li role="menuitem">
